# clab3

./: BST.hpp  CMakeLists.txt  DynamicArray.hpp  Set.hpp  main.cpp  person.hpp
Tests/: bst_test.cpp  set_test.cpp
